Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.15-dev-624-g8aff2c9 https://git.reactos.org/?p=reactos.git;a=commit;h=8aff2c9de7cf45dd306e447b0c27a379f827fe4c
Description
Hardware IDs assigned to the HALs are missing actual identifier, which is usually placed in HalHardwareIdString variable, so the user-mode PnP manager cannot identify the device and recognizes it as "Unknown device".
DETECTEDInternal\PCI_HAL string should belong to Compatible IDs section.
(base/services/umpnpmgr/install.c:110) Installing: Root\PCI_HAL\0000
|
err:(dll/win32/newdev/newdev.c:1006) DevInstallW failed with error 259
|
(base/services/umpnpmgr/install.c:224) InstallDevice failed for DeviceInstance 'Root\PCI_HAL\0000'
|
Screenshots for before and after attached, debug log for guilty build also attached. This issue does not seem to affect system working at first glance.
Attachments
Issue Links
- blocks
-
CORE-10456 IRP_MN_START_DEVICE may be sent multiple times due to race conditions in Pnp manager
-
- Resolved
-
- is duplicated by
-
CORE-17217 Regression, Since the PnP-works, Root\ACPI_HAL\0000 is not detected properly anymore
-
- Resolved
-
- relates to
-
CORE-17237 Regression: ReactOS does no longer boot with AC97 VBox driver installed and portcls.sys replaced
-
- Open
-
-
CORE-17398 Unrecognized devices after the new storage stack
-
- Resolved
-