[NTOS:PNP] Send GUID_DEVICE_ENUMERATED event for root devices

According to Victor, Windows Server 2003 does not do this, however
this fixes the regression with least changes in the kernel.

Also initialize device description registry value, as it's required by
New device installer (newdev.dll) to install driver from INF file.

CORE-17212 CORE-17398